manifests/postgres-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-operator
  namespace: postgres
  labels:
    app: postgres-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-operator
  template:
    metadata:
      labels:
        name: postgres-operator
        app: postgres-operator
    spec:
      serviceAccountName: zalando-postgres-operator
      containers:
      - name: postgres-operator
        image: aknudsen/postgres-operator:v1.0.0-45-gdacfbaa
        imagePullPolicy: IfNotPresent
