manifests/discourse.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: web-server
  sessionAffinity: None
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web-server
  labels:
    app: web-server
spec:
  serviceName: web-server
  selector:
    matchLabels:
      app: web-server
  replicas: 2
  template:
    metadata:
      labels:
        app: web-server
    spec:
      containers:
        - name: web-server
          image: aknudsen/discourse
          command: ["/sbin/boot"]
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          imagePullPolicy: Always
          volumeMounts:
          - name: discourse-storage
            mountPath: /shared
  volumeClaimTemplates:
  - metadata:
      name: discourse-storage
    spec:
      accessModes:
        - ReadWriteOnce
      storageClassName: do-block-storage
      resources:
        requests:
          storage: 10Gi
